k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: NodePort
  selector:
    app: chat
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
